v 0.9.9.4 (13 oct)

Crossbows
Steel Armor
Alloy Armor

+-5/25/all options in the village tab

v 0.9.9.3 (8 oct)

Resetting with more kittens will give additional bonuses to karma
Warehouse upgrades will now affect titanium limits
Energy Rifts will now give correct capacity effects to accelerators
Some ratio effects will be displayed in % format

v 0.9.9.2 (5 oct)

(Particle) accelerators
Dimensional Physics
Celestial Mechanics
Energy Rifts
Nuclear Smelters

Government (wip)

Dragons trade chance is changed from 75% to 95% 
Uranium will now have 250 base limit
Reactors will now improve uranium limit by 250

v 0.9.8.2 (2 oct)

Changes by xranti:
___

    The game will now render when new buildings are unlocked (http://redd.it/2hnj5z)
    Removed render hacks from gather and refine catnip buttons (see above fix)
    Fixed Super Unethical Climax achievement
    Added bio lab bonus to the refine catnip button
    Fixed coal rate display with Steel Plants upgrade (http://redd.it/2hh7it)
    Hide 0 effects in building tooltips
    Prevent crafting blueprints before researching physics (http://redd.it/2h4s74)
    Preserve active astronomical events when clearing the log (http://redd.it/2hysk9)
    Added x25 and x100 trade links (http://redd.it/2hd29d)
    Fixed bug causing the game to crash when all your kittens die (issue #9)
    Fixed transcendence save loading issues
    
	Fixed wood refine ratio in iron will mode

<333

v 0.9.8.0 (1 oct)

Transcendence
Fixed Stained Glass not giving correct bonuses to faith

v 0.9.7.0 (26 sep)

More accurate resource tooltips
Slighlty reduced save footprint


v 0.9.6.9 (25 sep)

Changes by Zusias:

Fixed smelter coal incorrectly getting double bonus from paragons/magnetos
___
Rows in the craft table will be now highlighted
Wood refinement in IW will be now affected by Saw Mills
Zebras will now have a 25% chance to bring a gold from a hunt if Golden Ore is researched

v 0.9.6.8 (20 sep)
